--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "smart-billing-frontend",
-  "private": true,
-  "version": "0.0.0",
+  "name": "smart-billing-backend",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Smart Billing System Backend",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "dependencies": {
-    "react": "^19.0.0-rc-5a4797c6-20250103",
-    "react-dom": "^19.0.0-rc-5a4797c6-20250103",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "mysql2": "^3.6.5",
     "axios": "^1.6.2"
-  },
-  "devDependencies": {
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
-    "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^7.2.2"
   }
 }
